[ASTERIXDB-3606][COMP]: Refactor plan representation: split PlanNode, use DatasetRegistry, replace index-based tracking
 - user model changes: no
 - storage format changes: no
 - interface changes: no

Details:
- Replaces some integer array index variables with Java object references to enhance readability and reduce indexing errors.
- Introduces an abstract PlanNode class with concrete subclasses ScanPlanNode and JoinPlanNode, instead of using a single generic PlanNode for all node types.
- Implements a centralized DatasetRegistry to manage datasets, eliminating the need to track subsets using integers in various locations.
- Standardizes all LeafInput instances as RealLeafInput, removing the need to separately track LogicalOperators as leaf inputs.
Ext-ref: MB-66641

Change-Id: I5c5a670fb66b5d525af31a3e8eca1e0c429e7adc
Reviewed-on: https://asterix-gerrit.ics.uci.edu/c/asterixdb/+/19604
Reviewed-by: Peeyush Gupta <peeyush.gupta@couchbase.com>
Integration-Tests: Jenkins <jenkins@fulliautomatix.ics.uci.edu>
Tested-by: Preetham Poluparthi <preetham02@apache.org>